# varseq

./: Cargo.toml  README.md
src/: args.rs  axumserver.rs  main.rs  popdata.rs  variant.rs  webversion.rs
src/templates/: altallel.hbs  index.hbs  pos.hbs  refallele.hbs
