[package]
name = "varseq"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
handlebars = "6.3.2"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
