[package]
name = "varseq"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.7"
axum-htmx = "0.8.1"
axum-template = { version = "3.0.0", features = ["handlebars"] }
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
handlebars = "6.3.2"
hyper = { version = "1.8.1", features = ["full"] }
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
